--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenho Animado</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>Recomendações</header>
-    <h1>Desenho Animado</h1>
-    <p>Patrulha Canina</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/p_NWLj2ezG8?si=OACyD_uk_jPGAIgR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <section>
+        <div>
+            <h1>Desenho Animado</h1>
+            <p>Patrulha Canina</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/p_NWLj2ezG8?si=OACyD_uk_jPGAIgR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
-
 </html>
