--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>Recomendações</header>
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>Desenho Animado</h1>
             <p>Patrulha Canina</p>
         </div>
