--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/p_NWLj2ezG8?si=OACyD_uk_jPGAIgR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <section>
+        <h2>Destinos</h2>
+        <div class="categoria-videos">
+            #os videos vem aqui
+        </div>
+    </section>
 </body>
 </html>
