--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <section>
-        <h2>Destinos</h2>
+        <h2>Desenhos</h2>
         <div class="categoria-videos">
             #os videos vem aqui
         </div>
