--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>Desenhos</h2>
         <div class="categoria-videos">
-            <img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg" alt="#">
+            <img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg" alt="Masha e o Urso">
         </div>
     </section>
 </body>
