--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <section>
         <h2>Desenhos</h2>
         <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=VSfoV_xrh78"></a>
             <img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg" alt="Masha e o Urso">
         </div>
     </section>
