--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <h2>Desenhos</h2>
         <div class="categoria-videos">
             <img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg" alt="Masha e o Urso">
-            <a href="https://www.youtube.com/watch?v=VSfoV_xrh78"></a>
+            <a href="https://www.youtube.com/watch?v=VSfoV_xrh78">
+                
+            </a>
         </div>
     </section>
 </body>
