--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
                 <img src="https://img.youtube.com/vi/VSfoV_xrh78/maxresdefault.jpg" alt="Masha e o Urso">
 
             </a>
+            <a href="https://www.youtube.com/watch?v=BlnL-49wI58">
+                <img src="https://img.youtube.com/vi/BlnL-49wI58/maxresdefault.jpg" 
+            </a>
+        </a>
+        <a href="https://www.youtube.com/watch?v=LHKve3f7acE">
+            <img src=https://img.youtube.com/vi/LHKve3f7acE/maxresdefault.jpg#" 
+        </a>
+    </a>
+    <a href="https://www.youtube.com/watch?v=F9waPIMHxw4&t=368s">
+        <img src="https://img.youtube.com/vi/F9waPIMHxw4/maxresdefault.jpg" 
+    </a>
+</a>
+<a href="https://www.youtube.com/watch?v=geGZjxWCFk0&t=537s">
+    <img src="https://img.youtube.com/vi/geGZjxWCFk0/maxresdefault.jpg" 
+</a>
         </div>
     </section>
 </body>
